feat: 添加旧版 Forge 模组重映射兼容